[gd_scene load_steps=9 format=3 uid="uid://behkac7sg4loi"]

[ext_resource type="Script" uid="uid://dv3rjr57hmwij" path="res://scripts/ui/mode_selection.gd" id="1_jv0sf"]
[ext_resource type="PackedScene" uid="uid://28ale2iku1n4" path="res://scenes/modes/game_play.tscn" id="2_0hetu"]
[ext_resource type="Resource" uid="uid://dso7a1vuipkqt" path="res://resources/modes/classic_mode_config.tres" id="3_t5a4b"]
[ext_resource type="Resource" uid="uid://djrsravpjyj8" path="res://resources/modes/fibonacci_mode_config.tres" id="4_t4d1t"]
[ext_resource type="Resource" uid="uid://dlv621h6njs6m" path="res://resources/modes/lucas_fibonacci_mode_config.tres" id="6_t4d1t"]
[ext_resource type="Resource" uid="uid://da3ioky106k1i" path="res://resources/modes/progressive_mode_config.tres" id="6_ws4rq"]
[ext_resource type="Resource" uid="uid://dklmno2p3q4r5" path="res://resources/modes/opposite_edge_mode_config.tres" id="7_kj7h5"]
[ext_resource type="Resource" uid="uid://bnt3ah04gd5v2" path="res://resources/modes/battle_mode_config.tres" id="8_kj7h5"]

[node name="ModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jv0sf")
game_play_scene = ExtResource("2_0hetu")
mode_configs = Array[Resource]([ExtResource("3_t5a4b"), ExtResource("4_t4d1t"), ExtResource("6_t4d1t"), ExtResource("6_ws4rq"), ExtResource("7_kj7h5"), ExtResource("8_kj7h5")])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLayout" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/LeftPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "请从中间选择一个游戏模式"
autowrap_mode = 2

[node name="CenterPanel" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/MainLayout/CenterPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "模式选择"
horizontal_alignment = 1

[node name="ModeListContainer" type="VBoxContainer" parent="CenterContainer/MainLayout/CenterPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 440)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MainLayout/CenterPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevPageButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "上一页"

[node name="NextPageButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "下一页"

[node name="BackButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "返回"

[node name="RightPanelContainer" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer"]
layout_mode = 2
text = "棋盘大小："

[node name="SpinBox" type="SpinBox" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer"]
layout_mode = 2
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
layout_mode = 2
text = "游戏种子："

[node name="SeedLineEdit" type="LineEdit" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "留空则随机"
select_all_on_focus = true
caret_blink = true

[node name="RefreshSeedButton" type="Button" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "点击以生成新的随机种子"
text = "🎲"
flat = true

[node name="Spacer" type="Control" parent="CenterContainer/MainLayout/RightPanelContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2
disabled = true
text = "开始游戏"
